# EVImproved

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
src/: authentication.rs  connection.rs  headers.rs  lib.rs  traits.rs  types.rs  urls.rs
src/types/: folder.rs  mod.rs  percentencodedstring.rs  recording.rs  recordinginfo.rs
testdata/: folder.json  folder_1000001.json  folder_1000002.json  readydata.json  recording.json  recording_1000002.json  root_folder.json
